# engineering-practices-ml

hw1/: README.md  linting.md  pyproject.toml
hw1/hw1/: test.py  test_black.py  test_flake8.py  test_isort.py
hw2/: README.md  pyproject.toml
hw2/hw2/: preprocessing.ipynb
hw2/hw2/datasets/: titanic_train.csv
hw3/: README.md  pipeline.py
hw3/mid_results/: processed_data.csv  val.csv
hw3/output/: output.csv
hw4/: README.md  model.cbm  pipeline.py  report.html
hw4/mid_results/: test.csv  train.csv
hw4/output/: output.csv
